--- a/src/public/css/signup.css
+++ b/src/public/css/signup.css
@@ -16,7 +16,7 @@ input {
 .container {
   position: relative;
   width: 100%;
-  background-color: #fff;
+  background-color: #ffffff;
   min-height: 100vh;
   overflow: hidden;
 }
@@ -130,13 +130,13 @@ form.sign-in-form {
 }
 
 .social-icon:hover {
-  color: #F86F03;
-  border-color: #F86F03;
+  color: #6366f1;
+  border-color: #6366f1;
 }
 
 .btn {
   width: 150px;
-  background-color: #F86F03;
+  background-color: #6366f1;
   border: none;
   outline: none;
   height: 49px;
@@ -150,7 +150,7 @@ form.sign-in-form {
 }
 
 .btn:hover {
-  background-color: #f98c39;
+  background-color: #6366f1;
 }
 .panels-container {
   position: absolute;
@@ -170,9 +170,9 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #F86F03 0%, #FFA41B 100%);
-  transition: 1.8s ease-in-out;
-  border-radius: 50%;
+  background-image: linear-gradient(-455deg,  #6366f1 0%,  #6366f1 100%);
+  transition: 1s ease-in-out;
+  border-radius: 60%;
   z-index: 6;
 }
 
