--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -11,11 +11,11 @@
           <h2 class="title">Sign in</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
-            <input type="text" name="nickname" placeholder="Nickname" required />
+            <input type="text" name="memberNick" placeholder="Nickname" required />
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
-            <input type="password" name="password" placeholder="Password" required />
+            <input type="password" name="memberPassword" placeholder="Password" required />
           </div>
           <input type="submit" value="Login" class="btn solid" />
           <p class="social-text">Or Sign in with social platforms</p>
