--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -64,7 +64,7 @@
           </div>
         </div>
         <% } else { %>
-          <p class="hero-content">Tizimga kirishingiz uchun Login yoki ro‘yxatdan o‘tishingiz kerak</p>
+          <p class="hero-content">먼저 로그인하거나 회원가입하셔야 합니다</p>
           <% } %>
     </div>
 
