--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -5,9 +5,8 @@
     <a href="/admin/" class="logo">Wisdom Admin</a>
     <div class="nav-links">
       <% if (member) { %>
-        <a href="/admin/teacher/recent">New Teachers</a>
-        <a href="/admin/student/recent">New Students</a>
-        <a href="#">New Lessons</a>
+        <a href="/admin/lessons">Lessons</a>
+        <a href="/admin/newlessons">Create New-Lesson</a>
         <% } %>
     </div>
 
