--- a/src/public/css/lesson.css
+++ b/src/public/css/lesson.css
@@ -26,7 +26,7 @@ body {
 }
 
 .logo {
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-weight: 700;
   color: var(--text-primary);
   text-decoration: none;
@@ -93,14 +93,14 @@ nav {
 
 .table th,
 .table td {
-  padding: 1rem;
+  padding: 2rem;
   border-bottom: 1px solid var(--border-color);
   color: var(--text-primary);
   text-align: center;
 }
 
 .table thead {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(16, 0, 0, 0.1);
 }
 
 .table tbody tr:hover {
@@ -127,7 +127,7 @@ input[type="number"],
 textarea,
 select {
   width: 100%;
-  padding: 0.9rem;
+  padding: 2rem;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.07);
   border: 1px solid var(--border-color);
@@ -240,7 +240,18 @@ select.new-product-status {
   }
 
   .upload-img-box img {
-    width: 100px;
-    height: 100px;
+    position: relative;
+    width: 19%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 10px;
   }
 }
