--- a/src/views/lessons.ejs
+++ b/src/views/lessons.ejs
@@ -60,8 +60,8 @@
           <h3 class="new-dish-txt">NEW LESSON DETAIL</h3>
 
           <div class="long-input">
-            <label>Lesson Title</label>
-            <input type="text" name="lessonTitle" placeholder="Title" required />
+            <label>Lesson Name</label>
+            <input type="text" name="lessonName" placeholder="Name" required />
             <input type="hidden" name="lessonStatus" value="PAUSE" />
           </div>
 
